frontend/tests/cases/positive/maybePair.gr
import Maybe

maybePair : forall (a : Type, b : Type) . Maybe (a, b [0]) -> a [0..1] -> a
maybePair x [d] =
  case x of
    None -> d;
    Some (a, [b]) -> a
